# trust-gateway

./: .env.example  .gitignore  Dockerfile  LICENSE  PROJECT_SUMMARY.md  README.md  VERIFICATION.md  docker-compose.yml  example.py  pyproject.toml  requirements.txt  setup.py  test_quick.py
tests/: __init__.py  conftest.py  test_authorization.py  test_database.py  test_jwt.py  test_receipts.py  test_trust_scoring.py
trust_gateway/: __init__.py  database.py  main.py  models.py  trust_engine.py
trust_gateway_sdk/: __init__.py  client.py
